# envdiff

./: .gitignore  README.md  setup.cfg
envdiff/: __init__.py  alias_cli.py  annotator_cli.py  audit_writer.py  auditor.py  baseline.py  baseline_store.py  cli.py  comparator_cli.py  diff_report_cli.py  differ.py  drift_detector.py  env_alias.py  env_annotator.py  env_classifier.py  env_comparator.py  env_deduplicator.py  env_differ_matrix.py  env_differ_report.py  env_differ_summary.py  env_duplicates.py  env_encoder.py  env_filter.py  env_formatter_table.py  env_grouper.py  env_linter.py  env_masker.py  env_normalizer.py  env_profiler.py  env_redact_cli.py  env_renamer.py  env_rotator.py  env_scorer.py  env_sorter.py  env_splitter.py  env_stats.py  env_tagger.py  env_templater.py  env_trimmer.py  exporter.py  (+25 more)
tests/: test_alias_cli.py  test_auditor.py  test_baseline.py  test_baseline_store.py  test_cli.py  test_comparator_cli.py  test_differ.py  test_drift_detector.py  test_env_alias.py  test_env_annotator.py  test_env_classifier.py  test_env_comparator.py  test_env_deduplicator.py  test_env_differ_matrix.py  test_env_differ_report.py  test_env_differ_summary.py  test_env_duplicates.py  test_env_encoder.py  test_env_filter.py  test_env_formatter_table.py  test_env_grouper.py  test_env_linter.py  test_env_masker.py  test_env_normalizer.py  test_env_profiler.py  test_env_redact_cli.py  test_env_renamer.py  test_env_rotator.py  test_env_scorer.py  test_env_sorter.py  test_env_splitter.py  test_env_stats.py  test_env_tagger.py  test_env_templater.py  test_env_trimmer.py  test_exporter.py  test_lint_cli.py  test_loader.py  test_merger.py  test_parser.py  (+10 more)
