[metadata]
name = envdiff
version = 0.1.0
description = Compare environment variable sets across staging and production configs with redaction support.
author = envdiff developers
license = MIT

[options]
packages =
    envdiff
install_requires =
    # no external runtime dependencies

[options.entry_points]
console_scripts =
    envdiff = envdiff.cli:main
    envdiff-stats = envdiff.stats_cli:main
    envdiff-groups = envdiff.groups_cli:main
    envdiff-score = envdiff.score_cli:main
    envdiff-lint = envdiff.lint_cli:main

[tool:pytest]
testpaths = tests
addopts = -q

[flake8]
max-line-length = 100
exclude =
    .git,
    __pycache__,
    build,
    dist
