[metadata]
name = envdiff
version = 0.1.0
description = Compare environment variable sets across staging and production configs
long_description = file: README.md
long_description_content_type = text/markdown
author = envdiff contributors
license = MIT

[options]
packages = find:
python_requires = >=3.8

[options.entry_points]
console_scripts =
    envdiff = envdiff.cli:main
    envdiff-stats = envdiff.stats_cli:main
    envdiff-groups = envdiff.groups_cli:main
    envdiff-score = envdiff.score_cli:main
    envdiff-lint = envdiff.lint_cli:main
    envdiff-sort = envdiff.sort_cli:main
    envdiff-tag = envdiff.tag_cli:main
    envdiff-rename = envdiff.rename_cli:main
    envdiff-template = envdiff.template_cli:main
    envdiff-compare = envdiff.comparator_cli:main

[tool:pytest]
testpaths = tests

[flake8]
max-line-length = 100
